[gd_scene load_steps=38 format=2]

[ext_resource path="res://fx/hoplite_slam.gd" type="Script" id=1]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_22.png" type="Texture" id=2]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_17.png" type="Texture" id=3]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_09.png" type="Texture" id=4]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_14.png" type="Texture" id=5]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_20.png" type="Texture" id=6]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_04.png" type="Texture" id=7]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_10.png" type="Texture" id=8]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_25.png" type="Texture" id=9]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_15.png" type="Texture" id=10]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_27.png" type="Texture" id=11]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_19.png" type="Texture" id=12]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_05.png" type="Texture" id=13]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_16.png" type="Texture" id=14]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_32.png" type="Texture" id=15]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_07.png" type="Texture" id=16]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_06.png" type="Texture" id=17]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_31.png" type="Texture" id=18]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_28.png" type="Texture" id=19]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_11.png" type="Texture" id=20]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_26.png" type="Texture" id=21]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_02.png" type="Texture" id=22]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_12.png" type="Texture" id=23]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_18.png" type="Texture" id=24]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_24.png" type="Texture" id=25]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_21.png" type="Texture" id=26]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_03.png" type="Texture" id=27]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_13.png" type="Texture" id=28]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_30.png" type="Texture" id=29]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_00.png" type="Texture" id=30]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_08.png" type="Texture" id=31]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_23.png" type="Texture" id=32]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_29.png" type="Texture" id=33]
[ext_resource path="res://external/pfxd/slam_burst/aseprite_frames/slam_burst_01.png" type="Texture" id=34]
[ext_resource path="res://external/sunvox/sfx/doof.wav" type="AudioStream" id=35]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 30 ), ExtResource( 34 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 31 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 28 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 24 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 26 ), ExtResource( 2 ), ExtResource( 32 ), ExtResource( 25 ), ExtResource( 9 ), ExtResource( 21 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 33 ), ExtResource( 29 ), ExtResource( 18 ), ExtResource( 15 ) ],
"loop": false,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 40.0

[node name="hoplite_slam" type="Node2D"]
z_index = -5
script = ExtResource( 1 )

[node name="lifetime" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
autostart = true

[node name="slam_duration" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="animated_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="area_2d" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="collision_shape_2d" type="CollisionShape2D" parent="area_2d"]
shape = SubResource( 2 )

[node name="audio_stream_player_2d" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 35 )
max_distance = 600.0

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
[connection signal="timeout" from="slam_duration" to="." method="_on_slam_duration_timeout"]
[connection signal="body_entered" from="area_2d" to="." method="_on_area_2d_body_entered"]
